# remote-obj

./: Cargo.toml  readme.md
remote-obj-derive/: Cargo.toml
remote-obj-derive/src/: getter.rs  helper.rs  lib.rs  setter.rs  variants.rs
src/: lib.rs
tests/: test_derive.rs  test_dynamic.rs  test_hydrate.rs  test_ref.rs  test_ref_enum.rs
