[package]
name = "remote-obj"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["remote-obj-derive"]

[dependencies]
remote-obj-derive = { path = "remote-obj-derive" }
bincode = { version = "2.0.0-beta.1", features = ["derive"], default-features = false}
